<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_author_avatar">Post author</string>
    <string name="description_likes">Likes</string>
    <string name="description_share">Share</string>
    <string name="description_view">View</string>
    <string name="menu_remove">Delete</string>
    <string name="post_text">Add post</string>
    <string name="description_post_like">Like</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">ERROR empty content</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="channel_remote_name">channel remote name</string>
    <string name="channel_remote_description">channel remote</string>
    <string name="notification_user_liked">%1$s was liked by post %2$s</string>
    <string name="google_play_unavailable">google play unavailable</string>
    <string name="notification_user_other">"%1$s sent Other Message "</string>
    <string name="notification_user_new">%1$s user create new post</string>
    <string name="empty_posts">empty post</string>
    <string name="retry_loading">retry loading</string>
    <string name="error_loading">error loading</string>
    <string name="add_post">add post</string>
    <string name="description_photo">description photo</string>
    <string name="remove">remove</string>
    <string name="description_select_photo">description select photo</string>
    <string name="description_take_photo">description take photo</string>
    <string name="menu_save">menu save</string>
    <string name="sign_in">sign in</string>
    <string name="sign_up">sign up</string>
    <string name="sign_out">sign out</string>
    <string name="login">Login:</string>
    <string name="password">Password:</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="avatar_add">Avatar add</string>
    <string name="wrong_login_or_password">Wrong login or password</string>
    <string name="repeat_password">Repeat password:</string>
    <string name="menu_back">menu_back</string>
    <string name="differents_password">Differents PASSWORD</string>
    <string name="notification_for_recipient">Message for %1$s  : %2$s</string>
    <string name="ad_description">ad</string>
</resources>