<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical|center_horizontal"
    tools:context=".activity.SignUpFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal|bottom"
        android:inputType="text"
        android:padding="@dimen/icon_button_padding"
        android:hint="@string/login"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameNew"
        app:layout_constraintStart_toStartOf="@id/login"
        android:gravity="center_horizontal|center_vertical"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="@dimen/icon_button_padding"
        android:hint="@string/password"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/nameNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/login"
        app:layout_constraintStart_toStartOf="@id/login"
        android:ems="10"
        android:inputType="text"
        android:padding="@dimen/icon_button_padding"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/name"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/passwordAccept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintStart_toStartOf="@id/login"
        android:gravity="center_horizontal|center_vertical"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="@dimen/icon_button_padding"
        android:hint="Repeat password:"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        app:layout_constraintTop_toBottomOf="@id/passwordAccept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/pickPhoto"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/nameNew"
        app:layout_constraintTop_toTopOf="@id/nameNew"
        app:layout_constraintBottom_toBottomOf="@id/nameNew"
        android:contentDescription="@string/avatar_add"
        android:padding="@dimen/common_spacing"
        app:icon="@drawable/ic_avatar_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>